crates/pixi-build-backend/src/snapshots/pixi_build_backend__compilers__tests__compiler_requirements_cxx.snap
---
source: crates/pixi-build-backend/src/compilers.rs
expression: result
---
- if: win
  then: vs2019
  else: []
- if: osx
  then: clangxx
  else: []
- if: emscripten
  then: emscripten
  else: []
- gxx
